# WeiJu2

./: .gitattributes  .gitignore  .gitmodules  .project  README.md  build.gradle  gradle.properties  settings.gradle
.github/: FUNDING.yml
.github/workflows/: android.yml  build_prerelease_apk.yml  build_release_apk.yml  nightly_build.yml  nightly_prerelease.yml
app/: build.gradle  google-services.json  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/: chatgpt_as_weiju2_script_assistant.txt  migrate_init_template  script_template  xposed_init
app/src/main/assets/template/: basic  migrate_init  package
app/src/main/res/anim/: fade_in.xml  fade_out.xml  popup_in.xml  popup_out.xml  slide_in_bottom.xml  slide_out_top.xml
app/src/main/res/drawable/: cardview_outline_background.xml  chip_shape_iris_background.xml  (+34 more)
app/src/main/resources/: android_common_type.lua  java_common_syntax.lua  java_common_type.lua  java_common_types.lua  java_primitives.lua  string_util.lua  table_util.lua
editor/: .project  build.gradle
editor/src/main/: AndroidManifest.xml
glide/: README.md  build.gradle
glide/src/main/: AndroidManifest.xml
gradle/wrapper/: gradle-wrapper.properties
jsitter/: .project  build.gradle
jsitter/src/main/: AndroidManifest.xml
jsitter/src/main/cpp/: CMakeLists.txt
jsitter/src/main/cpp/src/: jsitter.cc
lua/: build.gradle
lua/src/main/java/: lua.java  luajc.java
lua_library/: build.gradle
lua_library/src/main/java/: java_primitive_types.java
util/: build.gradle
util/src/main/: AndroidManifest.xml
(+300 files in other folders)
